--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	    <!-- Animation CSS -->
 	    <link href="assets/css/animate.css" rel="stylesheet">
 	    <link href="assets/css/font-awesome.css" rel="stylesheet">
+	    <link href="https://fonts.googleapis.com/css?family=Wallpoet&display=swap" rel="stylesheet"> 
+	    <script src="https://kit.fontawesome.com/c1f3d31719.js"></script>
 	</head>
 	<body>
 		<video autoplay loop class="bg_video">
@@ -29,25 +31,25 @@
 	            <button class="navbar-toggler ml-3" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
 	                <span class="navbar-toggler-icon"></span>
 	            </button>
-	            <a class="nav-link" title="Página inicial" href="#topo">Warlen Pinheiro</a>
+	            <a class="nav-link logo" title="Página inicial" href="#topo">Warlen Pinheiro</a>
 	            <div class="navbar-collapse collapse justify-content-between align-items-center w-100"
 	                id="collapsingNavbar2">
 	                <ul class="navbar-nav mx-auto text-md-center text-left">
 	                    <a class="nav-link" href="#skills">
 	                        <li class="nav-item d-flex flex-column mx-3">
-	                            <i class="fab fa-superpowers fa-lg pb-3"></i>
+	                            <i class="fab fa-superpowers fa-lg pb-3 efeitoGira"></i>
 	                            Habilidades
 	                        </li>
 	                    </a>
 	                    <a class="nav-link navbar-is-selected" href="#jobs">
 	                        <li class="nav-item d-flex flex-column mx-3">
-	                            <i class="fas fa-calculator fa-lg pb-3"></i>
+	                            <i class="fas fa-briefcase fa-lg pb-3 efeitoVibra"></i>
 	                            Portfólio
 	                        </li>
 	                    </a>
 	                    <a class="nav-link" href="#contact">
 	                        <li class="nav-item d-flex flex-column mx-3">
-	                            <i class="fas fa-book fa-lg pb-3"></i>
+	                            <i class="fas fa-id-card fa-lg pb-3 efeitoVibra"></i>
 	                            Contatos
 	                        </li>
 	                    </a>
