--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	    <link href="assets/css/font-awesome.css" rel="stylesheet">
 	    <link href="https://fonts.googleapis.com/css?family=Wallpoet&display=swap" rel="stylesheet"> 
 	    <script src="https://kit.fontawesome.com/c1f3d31719.js"></script>
+	    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
 		<video autoplay loop class="bg_video">
@@ -53,10 +54,20 @@
 	                            Contatos
 	                        </li>
 	                    </a>
-
 	                </ul>
 	            </div>
 	        </nav>
+	        <div class="row sobre-mimRow">
+	        	<div class="box col-lg-6 offset-lg-1">
+	        		<div class="avatar">
+	        			<img src="assets/media/eu.jpeg" class="img-responsive img-rounded">
+	        		</div>
+	        	</div>
+	        	<div class="col-lg-6 sobre-mim">
+	        		<h4 class="title offset-lg-2">Quem sou</h4>
+	        		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	        	</div>
+	        </div>
 		</div>
 	</body>
 </html>
