--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	        	</div>
 	        	<div class="col-lg-6 col-sm-6 col-xs-6 col-md-6 sobre-mim">
 	        		<h4 class="title offset-lg-2 offset-xs-2 offset-md-2 offset-sm-2">Quem sou</h4>
-	        		<p>Olá, obrigado pela visita!<br><br> Meu nome é Warlen, sou formado em Analise e desenvolvimento de sistemas e apaixonado por tecnologia. Atualmente trabalho com desenvolvimento web/mobile utilizando as tecnologias PHP, Slim Framework, HTML, CSS, Bootstrap, MySQL, PostgreSQL, JavaScript, Jquery e React Native. Porém estou sempre em busca de novos conhecimentos e tenho muita facilidade de aprendizado.</p>
+	        		<p>Olá, obrigado pela visita!!<br><br> Meu nome é Warlen, sou formado em Analise e desenvolvimento de sistemas e apaixonado por tecnologia. Atualmente trabalho com desenvolvimento web/mobile utilizando as tecnologias PHP, Slim Framework, HTML, CSS, Bootstrap, MySQL, PostgreSQL, JavaScript, Jquery e React Native. Porém estou sempre em busca de novos conhecimentos e tenho muita facilidade de aprendizado.</p>
 	        	</div>
 	        </div>
 		</div>
