--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                         <h4 class="title-text text-uppercase">Full Stack Developer</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
-                                <button type="button" class="btn button primary-button mr-4 text-uppercase">hire
-                                    me</button>
-                                <button type="button" class="btn button secondary-button text-uppercase">Get cv</button>
+                                <a href="https://github.com/warlenpinheiro" class="btn button primary-button mr-4 text-uppercase"><i class="fab fa-github-alt" style="position: absolute; left: 0; margin: 3px;"></i>GitHub
+                                    </a>
+                                <a href="https://www.linkedin.com/in/warlen-pinheiro-96261590/" class="btn button secondary-button text-uppercase">LinkedIn</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-12 banner-image">
-                        <img src="./img/banner/banner-image.svg" alt="banner-img" class="img-fluid">
+                        <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                                 developed by the community.
                             </p>
                         </div>
-                        <button type="button" class="btn button primary-button text-uppercase">Download cv</button>
+                        <a href="https://www.linkedin.com/in/warlen-pinheiro-96261590/" class="btn button primary-button text-uppercase">View CV in LinkedIn</a>
                     </div>
                 </div>
             </div>
@@ -134,68 +134,7 @@
                     </div>
                 </div>
                 <div class="container services-list">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <div class="services">
-                                <div class="sevices-img text-center py-4">
-                                    <img src="./img/services/s1.png" alt="Services-1">
-                                </div>
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">Wp developer</h5>
-                                    <p class="card-text text-secondary">
-                                        I develop websites and web applications, using modern 
-                                        technologies such as nodejs, laravel, reactjs, angular, 
-                                        according to the needs of your business.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <div class="services">
-                                <div class="sevices-img text-center py-4">
-                                    <img src="./img/services/s2.png" alt="Services-2">
-                                </div>
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">ux/ui desing</h5>
-                                    <p class="card-text text-secondary">
-                                        Some quick example text to build on the card
-                                        title and make up
-                                        the bulk of the card's content.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <div class="services">
-                                <div class="sevices-img text-center py-4">
-                                    <img src="./img/services/s3.png" alt="Services-3">
-                                </div>
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">web design</h5>
-                                    <p class="card-text text-secondary">
-                                        Some quick example text to build on the card
-                                        title and make up
-                                        the bulk of the card's content.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 col-sm-12">
-                            <div class="services">
-                                <div class="sevices-img text-center py-4">
-                                    <img src="./img/services/s4.png" alt="Services-4">
-                                </div>
-                                <div class="card-body text-center">
-                                    <h5 class="card-title text-uppercase font-roboto">seo optimize</h5>
-                                    <p class="card-text text-secondary">
-                                        Some quick example text to build on the card
-                                        title and make up
-                                        the bulk of the card's content.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    Em construção
                 </div>
             </div>
         </section>
