remove illustration from mobile

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-12 banner-image">
+                    <div class="col-lg-6 col-md-12 banner-image d-sm-none d-md-block">
                         <img src="./img/banner/banner-image.png" alt="banner-img" class="img-fluid">
                     </div>
                 </div>
