--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
                             <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about">about</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#services">services</a>
+                            <a class="nav-link" href="#skills">Skills</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">contact</a>
-                        </li>
-
                     </ul>
                 </div>
             </nav>
@@ -126,15 +122,128 @@
         
         <!--  ====================== Start Services Area =============================  -->
 
-        <section class="services-area" id="services">
+        <section class="services-area" id="skills">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center services-title">
-                        <h1 class="text-uppercase title-text">Services Offers</h1>
+                        <h1 class="text-uppercase title-text">Skills</h1>
                     </div>
                 </div>
-                <div class="container services-list">
-                    Em construção
+                <div class="container">
+                    <div class="row text-center">
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/html.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/css.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/js.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/bootstrap.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/python.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/aws.jpg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/angular.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/nodejs.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/react.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/mysql.svg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/laravel.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/ionic.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/linux.jpg">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/jenkins.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/docker.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-3">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/mongo.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
