--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Warlen Pinheiro</title>
 
+    <!--  Normalize css file  -->
+    <link rel="stylesheet" href="./css/normalize.css">
 
     <!--  Bootstrap css file  -->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -120,7 +122,7 @@
         <!--  ========================= End About Area ==========================  -->
 
         
-        <!--  ====================== Start Services Area =============================  -->
+        <!--  ====================== Start Skills Area =============================  -->
 
         <section class="services-area" id="skills">
             <div class="container">
@@ -248,7 +250,7 @@
             </div>
         </section>
 
-        <!--  ====================== End Services Area =============================  -->
+        <!--  ====================== End Skills Area =============================  -->
     </main>
     <!--  ======================= End Main Area ================================ -->
 
