--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
         <!--  ======================= Start Banner Area =======================  -->
-        <section class="site-banner" id="home">
+        <section class="site-banner section" id="home">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 site-title">
@@ -87,7 +87,7 @@
 
         <!--  ========================= About Area ==========================  -->
 
-        <section class="about-area" id="about">
+        <section class="about-area section" id="about">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
@@ -124,7 +124,7 @@
         
         <!--  ====================== Start Skills Area =============================  -->
 
-        <section class="services-area" id="skills">
+        <section class="services-area section" id="skills">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center services-title">
