--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                             <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#experience">Experience</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#skills">Skills</a>
                         </li>
                     </ul>
@@ -121,6 +124,72 @@
 
         <!--  ========================= End About Area ==========================  -->
 
+        <!--  ========================= Start Experience Area ==========================  -->
+
+        <section class="experience-area section" id="experience">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center experience-title">
+                        <h1 class="text-uppercase title-text">Experience</h1>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="main-timeline">
+                                <span class="timeline">
+                                    <div class="timeline-icon"><i class="fa fa-globe"></i></div>
+                                    <div class="timeline-content">
+                                        <h3 class="title">Junior Systems Programmer<br/><small>Masterix Sistemas<br/> Oct/19 - Present</small></h3>
+                                        <p class="description">
+                                            Together with the new members, it 
+                                            brought the culture of agile development to 
+                                            the company, with the adoption of the scrum methodology. 
+                                            I developed highly complex projects using technologies
+                                            like Laravel, Angular and Ionic. He also brought up the culture
+                                            of API documentation using swagger. And I inserted the TDD methodology 
+                                            in the team. I also worked with AWS in creating and maintaining EC2 instances, 
+                                            configuring and using S3, in addition to configuring CPanel.
+                                            I also used Jenkins for the system deployment process, in addition to the docker and 
+                                            kubernetes for containers control.
+                                        </p>
+                                    </div>
+                                </span>
+                                <span class="timeline">
+                                    <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
+                                    <div class="timeline-content">
+                                        <h3 class="title">Junior PHP Programmer<br/><small>Cajuína Software<br/> Feb/19 - Aug/19</small></h3>
+                                        <p class="description">
+                                            Cajuína Software had great importance in my development as a programmer. 
+                                            It was where I learned the importance of software testing in product quality 
+                                            and maintenance. I also learned to give more importance to details and to 
+                                            develop focusing on the user experience. I used PHP and Slim in the development 
+                                            of systems, in addition to a framework of the company itself. I entered the world of 
+                                            AWS with Amazon S3 and I also learned about Heroku. I also used React Native to create Apps and 
+                                            Pagar.me for payment control when we developed an eccomerce.
+                                        </p>
+                                    </div>
+                                </span>
+                                <span class="timeline">
+                                    <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
+                                    <div class="timeline-content">
+                                        <h3 class="title">Project Advisor<br/><small>Visão Jr <br/> Jun/18 - Apr/19</small></h3>
+                                        <p class="description">
+                                            Visão is a junior system development company in the computing course at the Federal University of Ouro Preto. 
+                                            There I started my Web development career, where 
+                                            I also learned about project management, systems analysis and contact with customers. 
+                                            I programmed websites and systems using PHP, JavaScript and Bootstrap.
+                                        </p>
+                                    </div>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--  ========================= End Experience Area ==========================  -->
         
         <!--  ====================== Start Skills Area =============================  -->
 
@@ -249,7 +318,6 @@
                 </div>
             </div>
         </section>
-
         <!--  ====================== End Skills Area =============================  -->
     </main>
     <!--  ======================= End Main Area ================================ -->
