--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <div class="timeline-icon"><i class="fa fa-globe"></i></div>
                                     <div class="timeline-content">
                                         <h3 class="title">Junior Systems Programmer<br/><small>Masterix Sistemas<br/> Oct/19 - Present</small></h3>
-                                        <p class="description">
+                                        <p class="description d-none d-md-block">
                                             Together with the new members, it 
                                             brought the culture of agile development to 
                                             the company, with the adoption of the scrum methodology. 
@@ -159,7 +159,7 @@
                                     <div class="timeline-icon"><i class="fa fa-rocket"></i></div>
                                     <div class="timeline-content">
                                         <h3 class="title">Junior PHP Programmer<br/><small>Cajuína Software<br/> Feb/19 - Aug/19</small></h3>
-                                        <p class="description">
+                                        <p class="description d-none d-md-block">
                                             Cajuína Software had great importance in my development as a programmer. 
                                             It was where I learned the importance of software testing in product quality 
                                             and maintenance. I also learned to give more importance to details and to 
@@ -174,7 +174,7 @@
                                     <div class="timeline-icon"><i class="fa fa-briefcase"></i></div>
                                     <div class="timeline-content">
                                         <h3 class="title">Project Advisor<br/><small>Visão Jr <br/> Jun/18 - Apr/19</small></h3>
-                                        <p class="description">
+                                        <p class="description d-none d-md-block">
                                             Visão is a junior system development company in the computing course at the Federal University of Ouro Preto. 
                                             There I started my Web development career, where 
                                             I also learned about project management, systems analysis and contact with customers. 
