--- a/index.html
+++ b/index.html
@@ -202,112 +202,126 @@
                 </div>
                 <div class="container">
                     <div class="row text-center">
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/html.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/css.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/js.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/bootstrap.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/sass.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-2">
+                            <div class="skill-title">
+                                <div class="skill-img">
+                                    <img class="img-fluid" src="./img/skills/php.png">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/python.svg">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/aws.jpg">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/angular.svg">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/nodejs.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/react.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/mysql.svg">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/laravel.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/ionic.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/linux.jpg">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/jenkins.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/docker.png">
                                 </div>
                             </div>
                         </div>
-                        <div class="skill-box col-6 col-lg-3">
+                        <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
                                     <img class="img-fluid" src="./img/skills/mongo.png">
