--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <div class="d-flex flex-row flex-wrap">
                                 <a href="https://github.com/warlenpinheiro" class="btn button primary-button mr-4 text-uppercase"><i class="fab fa-github-alt" style="position: absolute; left: 0; margin: 3px;"></i>GitHub
                                     </a>
-                                <a href="https://www.linkedin.com/in/warlen-pinheiro-96261590/" class="btn button secondary-button text-uppercase">LinkedIn</a>
+                                <a href="https://www.linkedin.com/in/warlen-pinheiro/" class="btn button secondary-button text-uppercase">LinkedIn</a>
                             </div>
                         </div>
                     </div>
