refactor: update informations and colors

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                     <div class="col-lg-6 col-md-12 site-title">
                         <h3 class="title-text">Hey</h3>
                         <h1 class="title-text text-uppercase">I am Warlen</h1>
-                        <h4 class="title-text text-uppercase">Full Stack Developer</h4>
+                        <h4 class="title-text text-uppercase">Software Enginner</h4>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
-                                <a href="https://github.com/warlenpinheiro" class="btn button primary-button mr-4 text-uppercase"><i class="fab fa-github-alt" style="position: absolute; left: 0; margin: 3px;"></i>GitHub
+                                <a href="https://github.com/warlenpinheiro" class="btn button primary-button mr-4 text-uppercase"><i class="fab fa-github-alt" style="position: absolute; left: 5px; margin: 3px;"></i>GitHub
                                     </a>
                                 <a href="https://www.linkedin.com/in/warlen-pinheiro/" class="btn button secondary-button text-uppercase">LinkedIn</a>
                             </div>
@@ -138,9 +138,32 @@
                         <div class="col-md-12">
                             <div class="main-timeline">
                                 <span class="timeline">
+                                    <div class="timeline-icon"><i class="fa fa-heart"></i></div>
+                                    <div class="timeline-content">
+                                        <h3 class="title">Software Enginner<br/><small>Gerencianet<br/> Dec/20 - Present</small></h3>
+                                        <p class="description d-none d-md-block">
+                                            Gerencianet is a wonderful company, where I've been learning better to build and maintain systems 
+                                            with a total focus on quality, usability, scalability and performance. Here I've been learning a lot
+                                            about software architecture, an area that has always fascinated me. The development language is 
+                                            Node.js, used with a focus on clean architecture, clean code and SOLID.
+                                        </p>
+                                    </div>
+                                </span>
+                                <span class="timeline">
+                                    <div class="timeline-icon"><i class="fa fa-thumbs-up"></i></div>
+                                    <div class="timeline-content">
+                                        <h3 class="title">Analyst Developer<br/><small>Empresta - Bem melhor<br/> Jul/20 - Dec/20</small></h3>
+                                        <p class="description d-none d-md-block">
+                                            At Empresta I was able to have a great growth in maturity, 
+                                            where I worked better my analysis skills and focus on software quality. 
+                                            As the main development stack, we use Laravel and Vue.js.
+                                        </p>
+                                    </div>
+                                </span>
+                                <span class="timeline">
                                     <div class="timeline-icon"><i class="fa fa-globe"></i></div>
                                     <div class="timeline-content">
-                                        <h3 class="title">Junior Systems Programmer<br/><small>Masterix Sistemas<br/> Oct/19 - Present</small></h3>
+                                        <h3 class="title">Junior Systems Programmer<br/><small>Masterix Sistemas<br/> Oct/19 - Jul/20</small></h3>
                                         <p class="description d-none d-md-block">
                                             Together with the new members, it 
                                             brought the culture of agile development to 
