--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
-                                    <img class="img-fluid" src="./img/skills/sass.png">
+                                    <img class="img-fluid" src="./img/skills/java.jpg">
                                 </div>
                             </div>
                         </div>
@@ -270,7 +270,7 @@
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
-                                    <img class="img-fluid" src="./img/skills/python.svg">
+                                    <img class="img-fluid" src="./img/skills/python.png">
                                 </div>
                             </div>
                         </div>
@@ -284,7 +284,7 @@
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
-                                    <img class="img-fluid" src="./img/skills/angular.svg">
+                                    <img class="img-fluid" src="./img/skills/angular.png">
                                 </div>
                             </div>
                         </div>
@@ -298,7 +298,7 @@
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
-                                    <img class="img-fluid" src="./img/skills/react.png">
+                                    <img class="img-fluid" src="./img/skills/react.jpg">
                                 </div>
                             </div>
                         </div>
@@ -319,7 +319,7 @@
                         <div class="skill-box col-6 col-lg-2">
                             <div class="skill-title">
                                 <div class="skill-img">
-                                    <img class="img-fluid" src="./img/skills/ionic.png">
+                                    <img class="img-fluid" src="./img/skills/nest.png">
                                 </div>
                             </div>
                         </div>
